# robozzle

./: .gitignore  DEPLOYMENT.md  eslint.config.js  index.html  package-lock.json  package.json  todo.md  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  ensure-daily.yml  generate-daily.yml  generate-puzzles.yml
crates/puzzle-verifier/: Cargo.toml
crates/puzzle-verifier/src/: executor.rs  lib.rs  main.rs  pruning.rs  puzzle.rs  solver.rs
public/: 404.html
scripts/: check-supabase.ts  convert-puzzles.ts  delete-all-puzzles.ts  generate-icons.js  upload-puzzles.ts
scripts/generate-daily/: backfill-rankings.ts  ensure-daily.ts  index.ts  simulation-engine.ts
scripts/puzzle-generation/: complexity.ts  config.ts  difficulty.ts  fitness.ts  generator.ts  grid-builder.ts  index.ts  pruner.ts  quality.ts  rust-verifier.ts  solution-generator.ts  solver.ts  templates.ts  triviality.ts  types.ts  upload-batch.ts  uploader.ts  verifier.ts  worker-loader.mjs  worker.ts
src/: App.tsx  index.css  main.tsx  sw.ts  vite-env.d.ts
src/data/: skins.ts
src/engine/: GameEngine.ts  puzzleParser.ts  simulationTypes.ts  tutorials.ts  types.ts
src/hooks/: useClassicLeaderboard.ts  useDailyLeaderboards.ts  useDailyPuzzle.ts  useGameEngine.ts  useInstallPrompt.ts  useLeaderboard.ts  useMonthlyRankings.ts  usePuzzleLeaderboard.ts  useSavedPrograms.ts  useSimulation.ts  useStreakTracker.ts
src/lib/: classicScoring.ts  dateUtils.ts  gifGenerator.ts  pushNotifications.ts  scoring.ts  shareGenerator.ts  shareImageGenerator.ts  supabase.ts
supabase/: config.toml
(+114 files in other folders)
